update navbar fixed width to fix issues on smaller devices. fixes #15

--- a/app/assets/stylesheets/leather/_variables.scss
+++ b/app/assets/stylesheets/leather/_variables.scss
@@ -2,6 +2,6 @@ $devise-bg-gradient-start:        #355069 !default;
 $devise-bg-gradient-end:          #5E7A9B !default;
 $devise-box-border-color:         #6ED5E4 !default;
 
-$navbar-fixed-width:              350px !default;
+$navbar-fixed-width:              300px !default;
 $navbar-fixed-collapsed-width:    75px !default;
 $scroll-panel-header-height:      $navbar-height !default;
